--- a/Hospital/pom.xml
+++ b/Hospital/pom.xml
@@ -12,6 +12,11 @@
             <version>1.3.0-beta23</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>3.5.2</version>
+</dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
